@@ -1,3 +1,6 @@
+2004-07-25 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * gputils 0.12.3 Released.
+
 2004-07-24 Craig Franklin <craigfranklin@users.sourceforge.net>
   * Merged patches from OpenBSD port.
 
